--- a/.gitattributes
+++ b/.gitattributes
@@ -12,8 +12,19 @@ fpa/fp_common/fpUtil.py -text
 fpa/fp_common/models.py -text
 fpa/fp_common/session.py -text
 fpa/fp_web_admin/__init__.py -text
+fpa/fp_web_admin/dbUtil.py -text
 fpa/fp_web_admin/fpAppConfig.py -text
+fpa/fp_web_admin/fpTrait.py -text
+fpa/fp_web_admin/fpTrial.py -text
+fpa/fp_web_admin/fpUtil.py -text
 fpa/fp_web_admin/fpWebAdmin.py -text
+fpa/fp_web_admin/static/fp.js -text
+fpa/fp_web_admin/templates/base.html -text
+fpa/fp_web_admin/templates/genericPage.html -text
+fpa/fp_web_admin/templates/login.html -text
+fpa/fp_web_admin/templates/newTrait.html -text
+fpa/fp_web_admin/templates/newTrial.html -text
+fpa/fp_web_admin/websess.py -text
 fpa/wsgi_adm_entry.py -text
 fpa/wsgi_app_entry.py -text
 misc/fp.conf -text
