script for doing something to all dbs

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 * text=auto !eol
 fp_mysql/delete_fprime_user.sh -text
+fp_mysql/forEachDb.sh -text
 fp_mysql/fprime.create.tables.sql -text
 fp_mysql/new_fprime_user.sh -text
 fpa/fp_app_api/__init__.py -text
