archiving old software

--- a/.gitattributes
+++ b/.gitattributes
@@ -26,4 +26,5 @@ fpa/fp_web_admin/templates/uploadAttributes.html -text
 fpa/fp_web_admin/websess.py -text
 fpa/wsgi_adm_entry.py -text
 fpa/wsgi_app_entry.py -text
+misc/datareap.php -text
 misc/fp.conf -text
