--- a/.gitattributes
+++ b/.gitattributes
@@ -18,6 +18,7 @@ fpa/fp_web_admin/fpUtil.py -text
 fpa/fp_web_admin/fpWebAdmin.py -text
 fpa/fp_web_admin/static/fp.js -text
 fpa/fp_web_admin/templates/base.html -text
+fpa/fp_web_admin/templates/downloadApp.html -text
 fpa/fp_web_admin/templates/genericPage.html -text
 fpa/fp_web_admin/templates/login.html -text
 fpa/fp_web_admin/templates/newTrait.html -text
