--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -14,7 +14,8 @@
 # code to be able to access python packages in the fpa directory.
 #
 WSGIScriptAlias /owalboc ***REMOVED***/fpa/wsgi_app_entry.py
-WSGIScriptAlias /fprime ***REMOVED***/fpa/wsgi_adm_entry.py
+WSGIScriptAlias /fprime ***REMOVED***/fpa/wsgi_app_entry.py
+WSGIScriptAlias /fieldprime ***REMOVED***/fpa/wsgi_adm_entry.py
 WSGIPythonPath ***REMOVED***/fpa
 
 # Make the fpa directory visible:
@@ -32,11 +33,11 @@ Alias /fpa/ ***REMOVED***/fpa/
 # may be necessary.
 
 # Make the fp directory visible, and executable:
-Alias /fp/ ***REMOVED***/fp/
-<Directory ***REMOVED***/fp/>
-  AddHandler cgi-script .py
-  Options +ExecCGI
-</Directory>
+#Alias /fp/ ***REMOVED***/fp/
+#<Directory ***REMOVED***/fp/>
+#  AddHandler cgi-script .py
+#  Options +ExecCGI
+#</Directory>
 
 
 #
@@ -48,11 +49,11 @@ Alias /fp/ ***REMOVED***/fp/
 #   RewriteOptions Inherit
 #
 
-<IfModule mod_rewrite.c>
-RewriteEngine on
-RewriteLog "/var/log/apache2/rewrite.log"
-RewriteLogLevel 3
-RewriteRule ^/fieldprime$ /fp/fpMain.py [PT]
-RewriteRule ^/fpclient$ /fprime/datareap.php [PT]
-</IfModule>
+#<IfModule mod_rewrite.c>
+#RewriteEngine on
+#RewriteLog "/var/log/apache2/rewrite.log"
+#RewriteLogLevel 3
+#RewriteRule ^/fieldprime$ /fp/fpMain.py [PT]
+#RewriteRule ^/fpclient$ /fprime/datareap.php [PT]
+#</IfModule>
 
