--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -8,14 +8,18 @@
 #
 
 #
-# Entry point for the FieldPrime app:
-# This for the flask web service. The WSGIScriptAlias commands define
+# Entry point for the FieldPrime app and user web interfaces:
+# This for the flask web services. The WSGIScriptAlias commands define
 # entry points, the WSGIPythonPath entry is necessary for the entry point
 # code to be able to access python packages in the fpa directory.
-#
-WSGIScriptAlias /owalboc ***REMOVED***/fpa/wsgi_app_entry.py
+
+# Entry point for the app web service (i.e. the app talks to here):
 WSGIScriptAlias /fprime ***REMOVED***/fpa/wsgi_app_entry.py
+
+# Entry point for the user web interface:
 WSGIScriptAlias /fieldprime ***REMOVED***/fpa/wsgi_adm_entry.py
+
+# Where to look for packages:
 WSGIPythonPath ***REMOVED***/fpa
 
 # Make the fpa directory visible:
