--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ fpa/fp_app_api/fpAppConfig.py -text
 fpa/fp_common/__init__.py -text
 fpa/fp_common/const.py -text
 fpa/fp_common/models.py -text
+fpa/fp_common/util.py -text
 fpa/fp_web_admin/__init__.py -text
 fpa/fp_web_admin/dbUtil.py -text
 fpa/fp_web_admin/fpAppConfig.py -text
