--- a/.gitattributes
+++ b/.gitattributes
@@ -35,6 +35,7 @@ fpa/fp_web_admin/templates/profile.html -text
 fpa/fp_web_admin/templates/sessError.html -text
 fpa/fp_web_admin/templates/uploadAttributes.html -text
 fpa/fp_web_admin/websess.py -text
+fpa/wsgi_adm_dev_entry.py -text
 fpa/wsgi_adm_entry.py -text
 fpa/wsgi_app_entry.py -text
 misc/datareap.php -text
