--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -7,6 +7,21 @@
 #   Include fp.conf
 #
 
+EnableSendfile off
+# prefork MPM
+# StartServers: number of server processes to start
+# MinSpareServers: minimum number of server processes which are kept spare
+# MaxSpareServers: maximum number of server processes which are kept spare
+# MaxClients: maximum number of server processes allowed to start
+# MaxRequestsPerChild: maximum number of requests a server process serves
+<IfModule mpm_prefork_module>
+    StartServers          5
+    MinSpareServers       5
+    MaxSpareServers      10
+    MaxClients          150
+    MaxRequestsPerChild   2
+</IfModule>
+
 #
 # Entry point for the FieldPrime app and user web interfaces:
 # This for the flask web services. The WSGIScriptAlias commands define
@@ -18,6 +33,13 @@ WSGIScriptAlias /fprime ***REMOVED***/fpa/wsgi_app_entry.py
 
 # Entry point for the user web interface:
 WSGIScriptAlias /fieldprime ***REMOVED***/fpa/wsgi_adm_entry.py
+
+# Development Entry point for the user web interface, should be same as /fieldprime but may
+# be enabled when that is not:
+WSGIScriptAlias /fpdev ***REMOVED***/fpa/wsgi_adm_dev_entry.py
+
+# Entry point for the wsgi test:
+WSGIScriptAlias /wsgitest ***REMOVED***/fpa/wsgi_test.py
 
 # Where to look for packages:
 WSGIPythonPath ***REMOVED***/fpa
