--- a/.gitattributes
+++ b/.gitattributes
@@ -19,6 +19,7 @@ fpa/fp_web_admin/fpUtil.py -text
 fpa/fp_web_admin/fpWebAdmin.py -text
 fpa/fp_web_admin/static/fpIcon.png -text
 fpa/fp_web_admin/static/fpStyle.css -text
+fpa/fp_web_admin/static/fplib.js -text
 fpa/fp_web_admin/static/newTrait.js -text
 fpa/fp_web_admin/templates/about.html -text
 fpa/fp_web_admin/templates/base.html -text
