--- a/.gitattributes
+++ b/.gitattributes
@@ -36,6 +36,7 @@ fpa/fp_web_admin/templates/profile.html -text
 fpa/fp_web_admin/templates/sessError.html -text
 fpa/fp_web_admin/templates/uploadAttributes.html -text
 fpa/fp_web_admin/trialAtt.py -text
+fpa/fp_web_admin/trialProperties.py -text
 fpa/fp_web_admin/websess.py -text
 fpa/wsgi_adm_dev_entry.py -text
 fpa/wsgi_adm_entry.py -text
