--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,8 @@ fpa/fp_web_admin/fpTrait.py -text
 fpa/fp_web_admin/fpTrial.py -text
 fpa/fp_web_admin/fpUtil.py -text
 fpa/fp_web_admin/fpWebAdmin.py -text
+fpa/fp_web_admin/static/css/font-awesome.css -text
+fpa/fp_web_admin/static/css/font-awesome.min.css -text
 fpa/fp_web_admin/static/css/images/ajax-loader.gif -text
 fpa/fp_web_admin/static/css/images/csiro-logo.png -text
 fpa/fp_web_admin/static/css/images/dark-blue-banner.png -text
@@ -26,10 +28,41 @@ fpa/fp_web_admin/static/css/images/grey-gradient.jpg -text
 fpa/fp_web_admin/static/css/images/loading-large.gif -text
 fpa/fp_web_admin/static/css/images/logo.png -text
 fpa/fp_web_admin/static/css/style.css -text
+fpa/fp_web_admin/static/fonts/FontAwesome.otf -text
+fpa/fp_web_admin/static/fonts/fontawesome-webfont.eot -text
+fpa/fp_web_admin/static/fonts/fontawesome-webfont.svg -text
+fpa/fp_web_admin/static/fonts/fontawesome-webfont.ttf -text
+fpa/fp_web_admin/static/fonts/fontawesome-webfont.woff -text
 fpa/fp_web_admin/static/fpIcon.png -text
 fpa/fp_web_admin/static/fpStyle.css -text
 fpa/fp_web_admin/static/fplib.js -text
+fpa/fp_web_admin/static/less/bordered-pulled.less -text
+fpa/fp_web_admin/static/less/core.less -text
+fpa/fp_web_admin/static/less/fixed-width.less -text
+fpa/fp_web_admin/static/less/font-awesome.less -text
+fpa/fp_web_admin/static/less/icons.less -text
+fpa/fp_web_admin/static/less/larger.less -text
+fpa/fp_web_admin/static/less/list.less -text
+fpa/fp_web_admin/static/less/mixins.less -text
+fpa/fp_web_admin/static/less/path.less -text
+fpa/fp_web_admin/static/less/rotated-flipped.less -text
+fpa/fp_web_admin/static/less/spinning.less -text
+fpa/fp_web_admin/static/less/stacked.less -text
+fpa/fp_web_admin/static/less/variables.less -text
 fpa/fp_web_admin/static/newTrait.js -text
+fpa/fp_web_admin/static/scss/_bordered-pulled.scss -text
+fpa/fp_web_admin/static/scss/_core.scss -text
+fpa/fp_web_admin/static/scss/_fixed-width.scss -text
+fpa/fp_web_admin/static/scss/_icons.scss -text
+fpa/fp_web_admin/static/scss/_larger.scss -text
+fpa/fp_web_admin/static/scss/_list.scss -text
+fpa/fp_web_admin/static/scss/_mixins.scss -text
+fpa/fp_web_admin/static/scss/_path.scss -text
+fpa/fp_web_admin/static/scss/_rotated-flipped.scss -text
+fpa/fp_web_admin/static/scss/_spinning.scss -text
+fpa/fp_web_admin/static/scss/_stacked.scss -text
+fpa/fp_web_admin/static/scss/_variables.scss -text
+fpa/fp_web_admin/static/scss/font-awesome.scss -text
 fpa/fp_web_admin/templates/about.html -text
 fpa/fp_web_admin/templates/base.html -text
 fpa/fp_web_admin/templates/contact.html -text
