--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 fp_mysql/delete_fprime_user.sh -text
 fp_mysql/forEachDb.sh -text
 fp_mysql/fprime.create.tables.sql -text
+fp_mysql/fpsys.sql -text
 fp_mysql/new_fprime_user.sh -text
 fpa/fp_app_api/__init__.py -text
 fpa/fp_app_api/fpApi.py -text
