--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -34,6 +34,9 @@ WSGIScriptAlias /fprime ***REMOVED***/fpa/wsgi_app_entry.py
 # Entry point for the user web interface:
 WSGIScriptAlias /fieldprime ***REMOVED***/fpa/wsgi_adm_entry.py
 
+# Entry point for test version of the user web interface (NB will use same databases):
+WSGIScriptAlias /fieldprimeDev ***REMOVED***/fptest/fpa/wsgi_adm_entry.py
+
 # Development Entry point for the user web interface, should be same as /fieldprime but may
 # be enabled when that is not:
 WSGIScriptAlias /fpdev ***REMOVED***/fpa/wsgi_adm_dev_entry.py
