--- a/.gitattributes
+++ b/.gitattributes
@@ -8,11 +8,13 @@ fpa/fp_app_api/__init__.py -text
 fpa/fp_app_api/fpApi.py -text
 fpa/fp_app_api/fpAppConfig.py -text
 fpa/fp_common/__init__.py -text
+fpa/fp_common/config.py -text
 fpa/fp_common/const.py -text
 fpa/fp_common/models.py -text
 fpa/fp_common/test.py -text
 fpa/fp_common/util.py -text
 fpa/fp_web_admin/__init__.py -text
+fpa/fp_web_admin/const.py -text
 fpa/fp_web_admin/dbUtil.py -text
 fpa/fp_web_admin/fpAppConfig.py -text
 fpa/fp_web_admin/fpTrait.py -text
