--- a/.gitattributes
+++ b/.gitattributes
@@ -17,6 +17,7 @@ fpa/fp_web_admin/__init__.py -text
 fpa/fp_web_admin/const.py -text
 fpa/fp_web_admin/datapage.py -text
 fpa/fp_web_admin/fpAppConfig.py -text
+fpa/fp_web_admin/fpRestApi.py -text
 fpa/fp_web_admin/fpTrait.py -text
 fpa/fp_web_admin/fpTrial.py -text
 fpa/fp_web_admin/fpUtil.py -text
