--- a/.gitattributes
+++ b/.gitattributes
@@ -44,6 +44,7 @@ fpa/fp_web_admin/static/fonts/fontawesome-webfont.ttf -text
 fpa/fp_web_admin/static/fonts/fontawesome-webfont.woff -text
 fpa/fp_web_admin/static/fpIcon.png -text
 fpa/fp_web_admin/static/fpStyle.css -text
+fpa/fp_web_admin/static/fpStylePostBootstrap.css -text
 fpa/fp_web_admin/static/fplib.js -text
 fpa/fp_web_admin/static/jquery.jeditable.css -text
 fpa/fp_web_admin/static/newTrait.js -text
