--- a/.gitattributes
+++ b/.gitattributes
@@ -103,3 +103,4 @@ misc/screenshots/FieldPrime_server_tabs.png -text
 misc/screenshots/FieldPrime_server_traits_tab.png -text
 misc/splitEntryBook.py -text
 misc/sqlalchemyExample.py -text
+misc/ti2barcode.sql -text
