--- a/.gitattributes
+++ b/.gitattributes
@@ -93,6 +93,7 @@ fpa/wsgi_app_entry.py -text
 misc/datareap.php -text
 misc/fp.conf -text
 misc/handy.sql -text
+misc/requirements.txt -text
 misc/sampleTrial1.csv -text
 misc/sampleTrial1.nonAscii.csv -text
 misc/sampleTrial1Mod.csv -text
