--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -47,13 +47,16 @@ WSGIScriptAlias /wsgitest ***REMOVED***/fpa/wsgi_test.py
 # Where to look for packages:
 WSGIPythonPath ***REMOVED***/fpa
 
+# Pass through authentication:
+WSGIPassAuthorization On
+
 # Make the fpa directory visible:
 # I can't remember whether this is essential, need to test..
-Alias /fpa/ ***REMOVED***/fpa/
-<Directory ***REMOVED***/fpa/>
-  Order allow,deny
-  Allow from all
-</Directory>
+# Alias /fpa/ ***REMOVED***/fpa/
+# <Directory ***REMOVED***/fpa/>
+#   Order allow,deny
+#   Allow from all
+# </Directory>
 
 #
 # Stuff for the current web admin interface. This does not use Flask,
