--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -30,19 +30,14 @@ EnableSendfile off
 
 # Entry point for the app web service (i.e. the app talks to here):
 WSGIScriptAlias /fprime ***REMOVED***/fpa/wsgi_app_entry.py
+# Test version:
+WSGIScriptAlias /fprimeDev ***REMOVED***/fptest/fpa/wsgi_app_entry.py
 
 # Entry point for the user web interface:
 WSGIScriptAlias /fieldprime ***REMOVED***/fpa/wsgi_adm_entry.py
-
-# Entry point for test version of the user web interface (NB will use same databases):
+# Test version:
 WSGIScriptAlias /fieldprimeDev ***REMOVED***/fptest/fpa/wsgi_adm_entry.py
 
-# Development Entry point for the user web interface, should be same as /fieldprime but may
-# be enabled when that is not:
-WSGIScriptAlias /fpdev ***REMOVED***/fpa/wsgi_adm_dev_entry.py
-
-# Entry point for the wsgi test:
-WSGIScriptAlias /wsgitest ***REMOVED***/fpa/wsgi_test.py
 
 # Where to look for packages:
 WSGIPythonPath ***REMOVED***/fpa
@@ -50,6 +45,7 @@ WSGIPythonPath ***REMOVED***/fpa
 # Pass through authentication:
 WSGIPassAuthorization On
 
+### Old Stuff:
 # Make the fpa directory visible:
 # I can't remember whether this is essential, need to test..
 # Alias /fpa/ ***REMOVED***/fpa/
@@ -57,21 +53,21 @@ WSGIPassAuthorization On
 #   Order allow,deny
 #   Allow from all
 # </Directory>
-
+#
 #
 # Stuff for the current web admin interface. This does not use Flask,
 # and I intend to replace this, or port it, to a Flask set up.
 # It is in use, however, at the time of writing, so the stuff below
 # may be necessary.
-
+#
 # Make the fp directory visible, and executable:
 #Alias /fp/ ***REMOVED***/fp/
 #<Directory ***REMOVED***/fp/>
 #  AddHandler cgi-script .py
 #  Options +ExecCGI
 #</Directory>
-
-
+#
+#
 #
 # Mod rewrite stuff. Note, to work this requires some magic in the VirtualHost stuff.
 # Specifically, in the file:
@@ -80,7 +76,7 @@ WSGIPassAuthorization On
 #   RewriteEngine on
 #   RewriteOptions Inherit
 #
-
+#
 #<IfModule mod_rewrite.c>
 #RewriteEngine on
 #RewriteLog "/var/log/apache2/rewrite.log"
