--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -22,6 +22,8 @@ EnableSendfile off
     MaxRequestsPerChild   2
 </IfModule>
 
+Define FP_ROOT ***REMOVED***/
+
 #
 # Entry point for the FieldPrime app and user web interfaces:
 # This for the flask web services. The WSGIScriptAlias commands define
@@ -29,59 +31,19 @@ EnableSendfile off
 # code to be able to access python packages in the fpa directory.
 
 # Entry point for the app web service (i.e. the app talks to here):
-WSGIScriptAlias /fprime ***REMOVED***/fpa/wsgi_app_entry.py
+WSGIScriptAlias /fprime ${FP_ROOT}fpa/wsgi_app_entry.py
 # Test version:
-WSGIScriptAlias /fprimeDev ***REMOVED***/fptest/fpa/wsgi_app_entry.py
+WSGIScriptAlias /fprimeDev ${FP_ROOT}fptest/fpa/wsgi_app_entry.py
 
 # Entry point for the user web interface:
-WSGIScriptAlias /fieldprime ***REMOVED***/fpa/wsgi_adm_entry.py
+WSGIScriptAlias /fieldprime ${FP_ROOT}fpa/wsgi_adm_entry.py
 # Test version:
-WSGIScriptAlias /fieldprimeDev ***REMOVED***/fptest/fpa/wsgi_adm_entry.py
+WSGIScriptAlias /fieldprimeDev ${FP_ROOT}fptest/fpa/wsgi_adm_entry.py
 
 
 # Where to look for packages:
-WSGIPythonPath ***REMOVED***/fpa
+WSGIPythonPath ${FP_ROOT}fpa
 
 # Pass through authentication:
 WSGIPassAuthorization On
-
-### Old Stuff:
-# Make the fpa directory visible:
-# I can't remember whether this is essential, need to test..
-# Alias /fpa/ ***REMOVED***/fpa/
-# <Directory ***REMOVED***/fpa/>
-#   Order allow,deny
-#   Allow from all
-# </Directory>
-#
-#
-# Stuff for the current web admin interface. This does not use Flask,
-# and I intend to replace this, or port it, to a Flask set up.
-# It is in use, however, at the time of writing, so the stuff below
-# may be necessary.
-#
-# Make the fp directory visible, and executable:
-#Alias /fp/ ***REMOVED***/fp/
-#<Directory ***REMOVED***/fp/>
-#  AddHandler cgi-script .py
-#  Options +ExecCGI
-#</Directory>
-#
-#
-#
-# Mod rewrite stuff. Note, to work this requires some magic in the VirtualHost stuff.
-# Specifically, in the file:
-#   /etc/apache2/sites-enabled/***REMOVED***-ssl.conf
-# We have to add the lines:
-#   RewriteEngine on
-#   RewriteOptions Inherit
-#
-#
-#<IfModule mod_rewrite.c>
-#RewriteEngine on
-#RewriteLog "/var/log/apache2/rewrite.log"
-#RewriteLogLevel 3
-#RewriteRule ^/fieldprime$ /fp/fpMain.py [PT]
-#RewriteRule ^/fpclient$ /fprime/datareap.php [PT]
-#</IfModule>
 
