--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -22,7 +22,8 @@ EnableSendfile off
     MaxRequestsPerChild   2
 </IfModule>
 
-Define FP_ROOT ***REMOVED***/
+# NB FP_ROOT needs to be defined in /etc/apache2/envvars
+# EG: export FP_ROOT=***REMOVED***/
 
 #
 # Entry point for the FieldPrime app and user web interfaces:
