--- a/misc/fp.conf
+++ b/misc/fp.conf
@@ -48,3 +48,6 @@ WSGIPythonPath ${FP_ROOT}fpa
 # Pass through authentication:
 WSGIPassAuthorization On
 
+# Virtual env dir:
+WSGIPythonHome ${FP_ROOT}fieldprime/pythonEnv
+
