--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
 * text=auto !eol
 fp_mysql/createProject.sh -text
 fp_mysql/delete_fprime_user.sh -text
+fp_mysql/docker.mysql.primed/.dockerignore -text
+fp_mysql/docker.mysql.primed/Dockerfile -text
+fp_mysql/docker.mysql.primed/makefile -text
 fp_mysql/forEachDb.sh -text
 fp_mysql/fprime.create.tables.sql -text
 fp_mysql/fpsys.sql -text
