--- a/fpa/Dockerfile
+++ b/fpa/Dockerfile
@@ -13,7 +13,7 @@ RUN mkdir /app/fieldprime; \
   mkdir /app/fieldprime/photos; \
   mkdir /app/fieldprime/categoryImages; \
   mkdir /app/fieldprime/crashReports; \
-  echo foo > /app/fieldprime/fppw
+  echo fpwserver:bar > /app/fieldprime/fppw
 
 #chmod 777 /app/fieldprime/wsessions; 
 # Should prob give permissions just to www-data, currently it seems wsgi script is run as user whiskey
