--- a/fpa/makefile
+++ b/fpa/makefile
@@ -2,7 +2,7 @@ IMAGE_NAME = fp_adm
 CONT_NAME = c_$(IMAGE_NAME)
 
 run :
-	docker run -d --name $(CONT_NAME) -p 8000:80 $(IMAGE_NAME)
+	docker run --name $(CONT_NAME) --link c_fp_mysql:mysql -d -p 8000:80 $(IMAGE_NAME)
 
 shell :
 	docker exec -it $(CONT_NAME) mod_wsgi-docker-shell
@@ -17,19 +17,17 @@ build :
 stop :
 	docker stop $(CONT_NAME)
 
+kill :
+	docker stop $(CONT_NAME)
+	docker rm $(CONT_NAME)
+
+zap :
+	make kill
+	make build
+	make run
+	make shell
+
 clean :
 	docker rm `docker ps -aq`
 #	docker rmi $$(docker images -q --filter "dangling=true")
-#
-
-sql :
-	docker run --name cmysql -e MYSQL_ROOT_PASSWORD=foo -d mysql:latest
-
-runs :
-	docker run --name $(CONT_NAME) --link cmysql:mysql -d -p 8000:80 $(IMAGE_NAME)
-
-comp :
-	docker run --name $(CONT_NAME) --link c_fp_mysql:mysql -d -p 8000:80 $(IMAGE_NAME)
-
-#	docker run --rm --name $(CONT_NAME) --link cmysql:mysql -d -p 8000:80 $(IMAGE_NAME)
 
