--- a/.gitattributes
+++ b/.gitattributes
@@ -33,6 +33,7 @@ fpa/fp_common/util.py -text
 fpa/fp_web_admin/__init__.py -text
 fpa/fp_web_admin/const.py -text
 fpa/fp_web_admin/datapage.py -text
+fpa/fp_web_admin/fpAppWapi.py -text
 fpa/fp_web_admin/fpRestApi.py -text
 fpa/fp_web_admin/fpTrait.py -text
 fpa/fp_web_admin/fpTrial.py -text
