--- a/fp_mysql/docker.mysql.primed/makefile
+++ b/fp_mysql/docker.mysql.primed/makefile
@@ -3,12 +3,24 @@ IMAGE_NAME = fp_mysql
 IMAGE_W_VER = $(IMAGE_NAME)$(TAG)
 RUN_NAME = c_$(IMAGE_NAME)
 
+#
 # Data container. Will use docker generated folder in /var/lib/docker/volumes, but you could use a dedicated non docker dir also.
+# Having a separate container Somewhat reduces the chance of accidentally deleting the database files.
+# NB, this will exit immediately, having created the persistent volume.
+#
 volumeImage :
 	docker run -v /var/lib/mysql --name c_fp_dbdata $(IMAGE_W_VER) echo "Data-only container for fpmysql"
 
+#
+# Mysql server container. This has to be running for access to the database.
+#
 run :
 	docker run -d -it --name $(RUN_NAME) --volumes-from c_fp_dbdata -e MYSQL_ROOT_PASSWORD=foo $(IMAGE_W_VER)
+
+# Attempt to try with host db directory, not tested, and probably not advisable if you use /var/lib/mysql independently.
+# When I tried, file ownerships were changed and a reinstall of mysql was required.
+#runHostDb :
+#	docker run -d -it --name c_fp_mysql -e MYSQL_ROOT_PASSWORD=foo -v /var/lib/mysql:/var/lib/mysql fp_mysql:v1
 
 shell :
 	docker exec -it $(RUN_NAME) /bin/bash
@@ -40,20 +52,11 @@ stop :
 
 clean :
 	rm fprime.sql fpsys.sql setup.sql fprime.create.tables.sql
-
 clean.con :
 	docker rm $(RUN_NAME)
-#	docker rm `docker ps -aq`
-
+clean.con.all :
+	docker rm `docker ps -aq`
 clean.dangling.images :
 	docker rmi $$(docker images -q --filter "dangling=true")
 
 ########################################################################
-
-sql :
-	docker run --name cmysql -e MYSQL_ROOT_PASSWORD=foo -d mysql:latest
-
-runs :
-	docker run --name fpadm-running --link cmysql:mysql -d -p 8000:80 fpadm
-
-#	docker run --rm --name fpadm-running --link cmysql:mysql -d -p 8000:80 fpadm
